--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
       "android"
     ],
     "plugins": {
-      "cordova-plugin-local-notification": {},
+      "cordova-plugin-local-notification": {
+        "ANDROIDX_CORE_VERSION": "1.12.0"
+      },
       "cordova-plugin-contacts": {},
       "cordova-plugin-android-permissions": {}
     }
